fix safari on iphone drag issue

--- a/client/src/styles/Game.css
+++ b/client/src/styles/Game.css
@@ -34,6 +34,7 @@
 .boardContainer {
   margin: 0 auto;
   display: grid;
+  overflow: hidden;
 }
 
 .boardContainer > canvas,
